{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 40,
  "lineage": "b4a9ba15-5f13-4141-d789-eb2987eef027",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:493263630011:network-acl/acl-00035022ba0726ee2",
            "default_network_acl_id": "acl-00035022ba0726ee2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00035022ba0726ee2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "493263630011",
            "subnet_ids": [
              "subnet-01044d5a2d1a3491f",
              "subnet-05495da96e3e0350d",
              "subnet-066f4431c6d8e5be6",
              "subnet-0e25ad13f1176cf0c"
            ],
            "tags": {
              "Name": "devops-cluster-singapore-vpc-default"
            },
            "tags_all": {
              "Name": "devops-cluster-singapore-vpc-default"
            },
            "vpc_id": "vpc-0f07a8397e6d8a479"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:493263630011:route-table/rtb-015f0e01e60d6203d",
            "default_route_table_id": "rtb-015f0e01e60d6203d",
            "id": "rtb-015f0e01e60d6203d",
            "owner_id": "493263630011",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "devops-cluster-singapore-vpc-default"
            },
            "tags_all": {
              "Name": "devops-cluster-singapore-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f07a8397e6d8a479"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:493263630011:security-group/sg-066a35f6905fffdc6",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-066a35f6905fffdc6",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "493263630011",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-cluster-singapore-vpc-default"
            },
            "tags_all": {
              "Name": "devops-cluster-singapore-vpc-default"
            },
            "vpc_id": "vpc-0f07a8397e6d8a479"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0034e8367910f7e1e",
            "arn": "arn:aws:ec2:ap-southeast-1:493263630011:elastic-ip/eipalloc-0034e8367910f7e1e",
            "domain": "vpc",
            "id": "eipalloc-0034e8367910f7e1e",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-215-135-192.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.135.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-cluster-singapore-vpc-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "devops-cluster-singapore-vpc-ap-southeast-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:493263630011:internet-gateway/igw-001a9d2d0f07aa487",
            "id": "igw-001a9d2d0f07aa487",
            "owner_id": "493263630011",
            "tags": {
              "Name": "devops-cluster-singapore-vpc"
            },
            "tags_all": {
              "Name": "devops-cluster-singapore-vpc"
            },
            "vpc_id": "vpc-0f07a8397e6d8a479"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0034e8367910f7e1e",
            "association_id": "eipassoc-09058f7eccfc85500",
            "connectivity_type": "public",
            "id": "nat-01cb90327f9bf96b7",
            "network_interface_id": "eni-02fb3bb7aad5cd391",
            "private_ip": "10.0.101.232",
            "public_ip": "13.215.135.192",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e25ad13f1176cf0c",
            "tags": {
              "Name": "devops-cluster-singapore-vpc-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "devops-cluster-singapore-vpc-ap-southeast-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00fe624b24d8158b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01cb90327f9bf96b7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00fe624b24d8158b9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-001a9d2d0f07aa487",
            "id": "r-rtb-036ab8e05fe33c20a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-036ab8e05fe33c20a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:493263630011:route-table/rtb-00fe624b24d8158b9",
            "id": "rtb-00fe624b24d8158b9",
            "owner_id": "493263630011",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devops-cluster-singapore-vpc-private"
            },
            "tags_all": {
              "Name": "devops-cluster-singapore-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f07a8397e6d8a479"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:493263630011:route-table/rtb-036ab8e05fe33c20a",
            "id": "rtb-036ab8e05fe33c20a",
            "owner_id": "493263630011",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devops-cluster-singapore-vpc-public"
            },
            "tags_all": {
              "Name": "devops-cluster-singapore-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f07a8397e6d8a479"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0babf6ea816f32e6c",
            "route_table_id": "rtb-00fe624b24d8158b9",
            "subnet_id": "subnet-066f4431c6d8e5be6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f14896b08b8af9ac",
            "route_table_id": "rtb-00fe624b24d8158b9",
            "subnet_id": "subnet-01044d5a2d1a3491f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b51717669d95211e",
            "route_table_id": "rtb-036ab8e05fe33c20a",
            "subnet_id": "subnet-0e25ad13f1176cf0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c9d5015c734b0fc",
            "route_table_id": "rtb-036ab8e05fe33c20a",
            "subnet_id": "subnet-05495da96e3e0350d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:493263630011:subnet/subnet-066f4431c6d8e5be6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066f4431c6d8e5be6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "493263630011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-singapore-vpc-private-ap-southeast-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "devops-cluster-singapore-vpc-private-ap-southeast-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f07a8397e6d8a479"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:493263630011:subnet/subnet-01044d5a2d1a3491f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01044d5a2d1a3491f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "493263630011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-singapore-vpc-private-ap-southeast-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "devops-cluster-singapore-vpc-private-ap-southeast-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f07a8397e6d8a479"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:493263630011:subnet/subnet-0e25ad13f1176cf0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e25ad13f1176cf0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "493263630011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-singapore-vpc-public-ap-southeast-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "devops-cluster-singapore-vpc-public-ap-southeast-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f07a8397e6d8a479"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:493263630011:subnet/subnet-05495da96e3e0350d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05495da96e3e0350d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "493263630011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-singapore-vpc-public-ap-southeast-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "devops-cluster-singapore-vpc-public-ap-southeast-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f07a8397e6d8a479"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:493263630011:vpc/vpc-0f07a8397e6d8a479",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00035022ba0726ee2",
            "default_route_table_id": "rtb-015f0e01e60d6203d",
            "default_security_group_id": "sg-066a35f6905fffdc6",
            "dhcp_options_id": "dopt-019d9a983bb93b593",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f07a8397e6d8a479",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-015f0e01e60d6203d",
            "owner_id": "493263630011",
            "tags": {
              "Name": "devops-cluster-singapore-vpc"
            },
            "tags_all": {
              "Name": "devops-cluster-singapore-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}